# rdgc

./: .gitignore  .pylintrc  License.txt  README.md  pyproject.toml  unit_test.py
.github/workflows/: pypi.yml  pypitest.yml  unit-test.yml
rdgc/: __init__.py  graph.py  nt.py  seq.py  utils.py
rdgc/graph/: __init__.py  base.py  connected.py  degree.py  tree.py  utils.py
rdgc/test/: __init__.py  test_graph.py  test_nt.py  test_seq.py
test/: __init__.py  test_black_formatter.py  test_graph.py  test_nt.py  test_seq.py
