[tool.poetry]
name = "rdgc"
version = "0.5.2"
description = "RDGC Data Generator for Contests"
authors = ["weilycoder <weily2009@outlook.com>"]
readme = "README.md"
license = "SATA"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
