[tool.poetry]
name = "rdgc"
version = "0.6.0"
description = "RDGC Data Generator for Contests"
authors = ["weilycoder <weily2009@outlook.com>"]
readme = "README.md"
license = "SATA"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
